# Incident-Management-System-CrewAI

./: .gitignore  README.md  pyproject.toml  requirements.txt
history/: historical_incidents.csv
sample_outputs/: Alert: High Memory Consumption Detected in ABC Applications.eml  Critical Alert: High CPU Utilization Detected.eml  Critical Incident: Application Crash Detected.eml
sample_outputs/graph_visualize/: visualize_graph.py  workflow_graph.dot
src/incident_management_crewai/: app.py  app_bkup.py  crew.py  main.py  state.py
src/incident_management_crewai/assets/: animations.js  styles.css
src/incident_management_crewai/bkup_data/: logs2.txt  logs3.txt
src/incident_management_crewai/config/: agents.yaml  tasks.yaml
src/incident_management_crewai/data/: .gitkeep  logs.txt
src/incident_management_crewai/logs/: crew_output.txt
src/incident_management_crewai/orchestrator/: graph.py  nodes.py
src/incident_management_crewai/tools/: custom_tool.py
